fix: inconsistancy and security problem
